<resources>
    <string name="app_name">MySeriesAppV2</string>
    <string name="series_title">Series title</string>
    <string name="episode">Episode</string>
    <string name="season">Season</string>
    <string name="status">Status</string>
    <string name="save">Save</string>

    <!--statuses-->
    <string name="to_watch">To watch</string>
    <string name="watching">Watching</string>
    <string name="complete">Complete</string>
    <string name="dropped">Dropped</string>
    <string name="arriving">Arriving</string>
    <string name="fill_all_fields">Please fill all inputs</string>
    <string name="search_hint">Look for your series …</string>
    <string name="search_title">Search</string>
    <string name="app_icon">MySeriesAppIcon</string>
    <string name="edit_button">Edit Button</string>
    <string name="delete_series">Delete Series</string>
    <string name="close_button">Close Button</string>
    <string name="increment_episode">Increment Episode</string>
    <string name="increment_season">Increment Season</string>
    <string name="decrement_episode">Decrement Episode</string>
    <string name="decrement_season">Decrement Season</string>
</resources>
