<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <ImageButton
        android:id="@+id/edit_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_edit"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:contentDescription="@string/edit_button" />

    <ImageButton
        android:id="@+id/delete_series"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_delete"
        app:layout_constraintTop_toBottomOf="@+id/edit_series"
        app:layout_constraintLeft_toLeftOf="@+id/edit_series"
        android:contentDescription="@string/delete_series" />

    <ImageButton
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/ic_menu_more"
        android:rotation="180"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="@+id/delete_series"
        android:layout_marginBottom="0dp"
        android:contentDescription="@string/close_button" />

    <TextView
        android:id="@+id/season_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/season"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Normal"
        app:layout_constraintTop_toTopOf="@+id/episode_label"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/episode_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/episode"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Normal"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />

    <ImageButton
        android:id="@+id/inc_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/episode_label"
        app:layout_constraintLeft_toLeftOf="@+id/episode_label"
        app:layout_constraintRight_toRightOf="@+id/episode_label"
        app:srcCompat="@android:drawable/arrow_up_float"
        app:layout_constraintHorizontal_bias="0.562"
        android:contentDescription="@string/increment_episode" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.42" />

    <ImageButton
        android:id="@+id/inc_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/season_label"
        app:layout_constraintLeft_toLeftOf="@+id/season_label"
        app:layout_constraintRight_toRightOf="@+id/season_label"
        app:srcCompat="@android:drawable/arrow_up_float"
        app:layout_constraintHorizontal_bias="0.571"
        android:contentDescription="@string/increment_season" />

    <ImageButton
        android:id="@+id/dec_episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/episode_label"
        app:layout_constraintRight_toRightOf="@+id/episode_label"
        app:layout_constraintTop_toBottomOf="@+id/episode_label"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:contentDescription="@string/decrement_episode" />

    <ImageButton
        android:id="@+id/dec_season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="@+id/season_label"
        app:layout_constraintRight_toRightOf="@+id/season_label"
        app:layout_constraintTop_toBottomOf="@+id/season_label"
        app:srcCompat="@android:drawable/arrow_down_float"
        android:contentDescription="@string/decrement_season" />

    <Spinner
        android:id="@+id/status_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>