<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <EditText
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:inputType="textCapWords|textNoSuggestions"
        android:ems="10"
        android:id="@+id/series_name"
        android:contentDescription="@string/series_title"
        android:maxLines="1"
        android:textAlignment="center"
        android:nextFocusDown="@+id/season_number"
        android:nextFocusForward="@+id/season_number"
        android:nextFocusLeft="@+id/season_number"
        android:nextFocusRight="@+id/season_number"
        android:nextFocusUp="@+id/season_number"
        android:background="@drawable/text_box_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:imeOptions="flagNavigateNext"
        android:selectAllOnFocus="false"

        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="12dp" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/episode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/episode_label"
        android:textAppearance="@style/TextAppearance.Normal"
        android:layout_marginTop="0dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toRightOf="@+id/season_label"
        app:layout_constraintTop_toTopOf="@+id/season_label" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/episode_number"
        android:layout_width="50dp"
        android:textAlignment="center"
        android:imeOptions="actionDone"
        android:background="@drawable/text_box_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/episode_label"
        app:layout_constraintRight_toRightOf="@+id/episode_label"
        app:layout_constraintLeft_toLeftOf="@+id/episode_label" />

    <android.support.v7.widget.AppCompatTextView
        android:text="@string/season"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/season_label"
        android:textAppearance="@style/TextAppearance.Normal"
        android:layout_below="@+id/series_name"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/series_name"
        app:layout_constraintLeft_toLeftOf="@+id/series_name" />

    <EditText
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/season_number"
        android:textAlignment="center"
        android:layout_width="50dp"
        android:nextFocusDown="@+id/episode_number"
        android:nextFocusForward="@+id/episode_number"
        android:nextFocusLeft="@+id/episode_number"
        android:nextFocusRight="@+id/episode_number"
        android:nextFocusUp="@+id/episode_number"
        android:imeOptions="flagNavigatePrevious|flagNavigateNext"
        android:background="@drawable/text_box_style"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/season_label"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="@+id/season_label"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/season_label" />

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/com.karol.myseriesapp.view.FieldLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:textSize="18sp"
        app:layout_constraintTop_toTopOf="@+id/episode_label"
        app:layout_constraintLeft_toRightOf="@+id/episode_label"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="0dp" />

    <Spinner
        android:id="@+id/status_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="@+id/com.karol.myseriesapp.view.FieldLabel"
        android:layout_marginTop="4dp"
        app:layout_constraintTop_toBottomOf="@+id/com.karol.myseriesapp.view.FieldLabel"
        app:layout_constraintRight_toRightOf="@+id/series_name"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.v7.widget.AppCompatButton
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:id="@+id/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
